<resources>
    <string name="app_name">Cats\' weight controller</string>
    <string name="your_pets">Your pets</string>
    <string name="add_a_cat">Add a cat</string>
    <string name="view_records">View Records</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cats_file_name">catsDirectory</string>
    <string name="weights_diary_fileName">weightsDiary</string>
    <string name="save_cat">Save cat</string>
    <string name="add_weight_entry">Add weight entry</string>
    <string name="weight_s_diary">Weight\'s diary</string>
    <string name="all_pets">All pets</string>
    <string name="image_of_cat">image of cat</string>
    <string name="save_weight">Save weight</string>
    <string name="cat_s_current_weight">Cat\'s current weight</string>
    <string name="add_picture">Add picture</string>
</resources>